zokrates_cli/examples/compile_errors/mutability/multi_assign_to_non_mutable.zok
def foo() -> (field, field):
    return 1, 2

def main():
    field a, field b = foo()
    a = 3
    return